version/0.40/_sources/api/solver/_autosummary/settings/export.rst.txt
:orphan:

.. _export:

export
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.export
    :show-inheritance:

.. rubric:: Attributes

==================================================   ===============================

Attribute                                                                    Summary

==================================================   ===============================
:ref:`sc_def_file_settings <sc_def_file_settings>`                      File object.

:ref:`settings <settings>`                               The export settings object.

==================================================   ===============================

.. rubric:: Methods

======================================================================   =================================================================================================================================================================

Method                                                                                                                                                                                                                             Summary

======================================================================   =================================================================================================================================================================
:ref:`abaqus <abaqus>`                                                                                                                                                                                               Write an ABAQUS file.

:ref:`mechanical_apdl <mechanical_apdl>`                                                                                                                                                                    Write an Mechanical APDL file.

:ref:`mechanical_apdl_input <mechanical_apdl_input>`                                                                                                                                                  Write an Mechanical APDL Input file.

:ref:`ascii <ascii>`                                                                                                                                                                                                  Write an ASCII file.

:ref:`avs <avs>`                                                                                                                                                                                                        Write an AVS file.

:ref:`ensight <ensight>`                                                                                                                                                             Write EnSight 6 geometry, velocity, and scalar files.

:ref:`ensight_gold <ensight_gold>`                                                                                                                                                Write EnSight Gold geometry, velocity, and scalar files.

:ref:`ensight_gold_surface <ensight_gold_surface>`                                                                                                                                Write EnSight Gold geometry, velocity, and scalar files.

:ref:`ensight_dvs <ensight_dvs>`                                                                                                                                                                                 Write a EnSight DVS file.

:ref:`visualize_output_options <visualize_output_options>`                                                                                                                     Setup write options for Visualize connection in Fluids One.

:ref:`visualize_output_write <visualize_output_write>`                                                                                                                         Setup write options for Visualize connection in Fluids One.

:ref:`fieldview <fieldview>`                                                                                                                                                                          Write Fieldview case and data files.

:ref:`fieldview_data <fieldview_data>`                                                                                                                                                                Write Fieldview case and data files.

:ref:`gambit <gambit>`                                                                                                                                                                                        Write a Gambit neutral file.

:ref:`cgns <cgns>`                                                                                                                                                                                                      Write a CGNS file.

:ref:`custom_heat_flux <custom_heat_flux>`                                                                                                                                                         Write a generic file for heat transfer.

:ref:`dx <dx>`                                                                                                                                                                                     Write an IBM Data Explorer format file.

:ref:`ensight_gold_parallel_surfaces <ensight_gold_parallel_surfaces>`                                         Write EnSight Gold geometry, velocity and scalar files for surfaces. Fluent will write files suitable for EnSight Parallel.

:ref:`ensight_gold_parallel_volume <ensight_gold_parallel_volume>`           Write EnSight Gold geometry, velocity and scalar files for cell zones and boundaries attached to them. Fluent will write files suitable for EnSight Parallel.

:ref:`icemcfd_for_icepak <icemcfd_for_icepak>`                                                                                                                                                         Write a binary ICEMCFD domain file.

:ref:`fast_mesh <fast_mesh>`                                                                                                                                                                   Write a FAST/Plot3D unstructured mesh file.

:ref:`fast_solution <fast_solution>`                                                                                                                                                       Write a FAST/Plot3D unstructured solution file.

:ref:`fast_velocity <fast_velocity>`                                                                                                                                                Write a FAST/Plot3D unstructured vector function file.

:ref:`taitherm <taitherm>`                                                                                                                                                                                          Write a TAITherm file.

:ref:`fieldview_unstruct <fieldview_unstruct>`                                                                                                                                               Write a Fieldview unstructured combined file.

:ref:`fieldview_unstruct_mesh <fieldview_unstruct_mesh>`                                                                                                                                    Write a Fieldview unstructured mesh only file.

:ref:`fieldview_unstruct_data <fieldview_unstruct_data>`                                                                                                                                 Write a Fieldview unstructured results only file.

:ref:`fieldview_unstruct_surfaces <fieldview_unstruct_surfaces>`                                                                                                                        Write a Fieldview unstructured surface mesh, data.

:ref:`ideas <ideas>`                                                                                                                                                                                        Write an IDEAS universal file.

:ref:`nastran <nastran>`                                                                                                                                                                                             Write a NASTRAN file.

:ref:`patran_neutral <patran_neutral>`                                                                                                                                                                        Write a PATRAN neutral file.

:ref:`patran_nodal <patran_nodal>`                                                                                                                                                                      Write a PATRAN nodal results file.

:ref:`vtk <vtk>`                                                                                                                                                                                             Write a VTK (.vtp/.vtu) file.

:ref:`tecplot <tecplot>`                                                                                                                                                                                  Write a Tecplot+3DV format file.

:ref:`outline_view_settings <outline_view_settings>`                                                                                            Export case settings by providing the location of those settings in the Outline View tree.

======================================================================   =================================================================================================================================================================

.. rubric:: Included in:

==================   ==================================================================================================================================================================================================================

Parent                                                                                                                                                                                                                          Summary

==================   ==================================================================================================================================================================================================================
:ref:`file <file>`       Import and export several kinds of files. Files that are read include mesh, case, data, profile, Scheme, and journal files. Files that are written include case, data, profile, journal, and transcript files.

==================   ==================================================================================================================================================================================================================

